refactor work page

--- a/work.html
+++ b/work.html
@@ -45,92 +45,102 @@
         </header>
 
         <!-- This the main part-->
-        <section>
-            <h1>Work (Projects) </h1>
-            <p>Here are some of the projects I have completed and am currently
-                working on.</p>
-            <div class="projects-grid-container">
+        <main>
+            <section class="work-wrapper">
+                <h1>Work (Projects) </h1>
+                <p>Here are some of the projects I have completed and am
+                    currently
+                    working on.</p>
+                <div class="projects-grid-container">
 
-                <div class="projects-grid-item">
-                    <h2>Project one</h2>
-                    <p>
-                        As I web Developement student, I applied Html, css ,what
-                        I have so far learned to create this first reponsive
-                        website
-                    </p>
-                    <a href="#"> See project on Github</a>
-                </div>
+                    <div class="projects-grid-item">
+                        <h2>Project one</h2>
+                        <p>
+                            As I web Developement student, I applied Html, css
+                            ,what
+                            I have so far learned to create this first reponsive
+                            website
+                        </p>
+                        <a href="#"> See project on Github</a>
+                    </div>
 
-                <div class="projects-grid-item">
-                    <h2>Project two</h2>
-                    <p>
-                        As I web Developement student, I applied Html, css ,what
-                        I have so far learned to create this first reponsive
-                        website
-                    </p>
-                    <a href="#"> See project on Github</a>
+                    <div class="projects-grid-item">
+                        <h2>Project two</h2>
+                        <p>
+                            As I web Developement student, I applied Html, css
+                            ,what
+                            I have so far learned to create this first reponsive
+                            website
+                        </p>
+                        <a href="#"> See project on Github</a>
+                    </div>
+                    <div class="projects-grid-item">
+                        <h2>Project three</h2>
+                        <p>
+                            As I web Developement student, I applied Html, css
+                            ,what
+                            I have so far learned to create this first reponsive
+                            website
+                        </p>
+                        <a href="#"> See project on Github</a>
+                    </div>
+                    <div class="projects-grid-item">
+                        <h2>Project four</h2>
+                        <p>
+                            As I web Developement student, I applied Html, css
+                            ,what
+                            I have so far learned to create this first reponsive
+                            website
+                        </p>
+                        <a href="#"> See project on Github</a>
+                    </div>
+                    <div class="projects-grid-item">
+                        <h2>Project five</h2>
+                        <p>
+                            As I web Developement student, I applied Html, css
+                            ,what
+                            I have so far learned to create this first reponsive
+                            website
+                        </p>
+                        <a href="#"> See project on Github</a>
+                    </div>
+                    <div class="projects-grid-item">
+                        <h2>Project six</h2>
+                        <p>
+                            As I web Developement student, I applied Html, css
+                            ,what
+                            I have so far learned to create this first reponsive
+                            website
+                        </p>
+                        <a href="#"> See project on Github</a>
+                    </div>
+                    <div class="projects-grid-item">
+                        <h2>Project seven</h2>
+                        <p>
+                            As I web Developement student, I applied Html, css
+                            ,what
+                            I have so far learned to create this first reponsive
+                            website
+                        </p>
+                        <a href="#"> See project on Github</a>
+                    </div>
                 </div>
-                <div class="projects-grid-item">
-                    <h2>Project three</h2>
-                    <p>
-                        As I web Developement student, I applied Html, css ,what
-                        I have so far learned to create this first reponsive
-                        website
-                    </p>
-                    <a href="#"> See project on Github</a>
-                </div>
-                <div class="projects-grid-item">
-                    <h2>Project four</h2>
-                    <p>
-                        As I web Developement student, I applied Html, css ,what
-                        I have so far learned to create this first reponsive
-                        website
-                    </p>
-                    <a href="#"> See project on Github</a>
-                </div>
-                <div class="projects-grid-item">
-                    <h2>Project five</h2>
-                    <p>
-                        As I web Developement student, I applied Html, css ,what
-                        I have so far learned to create this first reponsive
-                        website
-                    </p>
-                    <a href="#"> See project on Github</a>
-                </div>
-                <div class="projects-grid-item">
-                    <h2>Project six</h2>
-                    <p>
-                        As I web Developement student, I applied Html, css ,what
-                        I have so far learned to create this first reponsive
-                        website
-                    </p>
-                    <a href="#"> See project on Github</a>
-                </div>
-                <div class="projects-grid-item">
-                    <h2>Project seven</h2>
-                    <p>
-                        As I web Developement student, I applied Html, css ,what
-                        I have so far learned to create this first reponsive
-                        website
-                    </p>
-                    <a href="#"> See project on Github</a>
-                </div>
-            </div>
-        </section>
+            </section>
 
-        <!-- This the footer part-->
-        <footer class="page-footer">
-            <p>Follow me on </p>
-            <div class="social-media">
-                <a href="https://github.com/" target="_blank">
-                    <img src="img/github_icon.svg" alt="github icon">
-                </a>
-                <a href="https://www.linkedin.com/" target="_blank">
-                    <img src="img/linkedin_icon.svg" alt="linked icon">
-                </a>
-            </div>
-        </footer>
-        <script src="js/tota11y.min.js"></script>
+            <!-- This the footer part-->
+            <footer class="page-footer">
+                <p>Follow me on </p>
+                <div class="social-media">
+                    <a href="https://github.com/" target="_blank">
+                        <img src="img/github_icon.svg" alt="github icon">
+                    </a>
+                    <a href="https://www.linkedin.com/" target="_blank">
+                        <img src="img/linkedin_icon.svg" alt="linked icon">
+                    </a>
+                </div>
+            </footer>
+            <script src="js/tota11y.min.js"></script>
+        </main>
     </body>
 
 </html>
