--- a/contact.html
+++ b/contact.html
@@ -46,60 +46,21 @@
         <!-- This the main part-->
         <main>
             <section class="contact-container">
+                <h1>Contact</h1>
                 <div class="personal-contact">
                     Mezekr w. <br>
                     Examplestraße 01 <br>
                     09xxx Freiberg <br>
-                    Deutschland <br>
+                    Germany<br>
+                    <br>
                     Telephone number: <a
                         href="tel:+49-152-1615243">+491521615243</a> <br>
                     Email: <a
-                        href="mailto:examplamail@tuta.com">examplamail@tuta.com</a>
-                    <br>
-                    <a href="mailto:examplamail@tuta.com">Contact me</a>
+                        href="mailto:testemail@tuta.com">testemail@tuta.com</a>
                 </div>
-                <div class="form-container">
-                    <form action="/user-registration-form.html" method="post"
-                        id="contact-form">
-                        <fieldset>
-                            <legend> Contact me </legend>
-                            <label for="firstname">Enter your First name:
-                                <input type="text" id="firstname"
-                                    name="firstname" required> <br>
-                            </label>
-                            <br>
-                            <label for="lastname">Enter your Last name:
-                                <input type="text" id="lastname" name="lastname"
-                                    required> <br>
-                            </label>
-                            <br>
-                            <label for="age">Enter your your Age:
-                                <input type="number" id="age" name="age"
-                                    required min="13"><br>
-                            </label>
-                            <br>
-                            <label for="phone-number">Enter your phone number:
-                                <input type="tel" id="phone-number"
-                                    name="phone-number"
-                                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><br>
-                            </label>
-                            <br>
-                            <label for="email">Enter your email:
-                                <input type="email" id="email" name="email"
-                                    required>
-                                <br>
-                            </label>
-                            <br>
-                            <label for="comment">Leave a Comment
-                                <textarea id="comment" name="comment" rows="5"
-                                    cols="20"></textarea> <br>
-                            </label>
-                            <br>
-                            <button type="submit" name="submit" value="Submit">
-                                Submit
-                            </button><br>
-                        </fieldset>
-                    </form>
+                <div>
+                    <a href="mailto:testemail@tuta.com" class="button">Contact
+                        me</a>
                 </div>
             </section>
         </main>
