update index page content

--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
                         alt="Mezekr profile portraitphotograph">
                 </div>
                 <div class="profile-text">
-                    <h1>Hello World!</h1>
-                    <p>My name is Mezekr W.</p>
-                    <p> I am <span>Web</span> developer</p>
-                    <a href="https://github.com/" target="_blank">Check out some
-                        of my code</a>
-                    <button type="button" class="button-example"> Example
-                        Button</button>
+                    <h1>Hi, I'm Mezekr</h1>
+                    <p> I am <span>Web</span> developer.</p>
+                    <a href="https://github.com/" target="_blank">Check out my
+                        work</a>
+                    <!-- <button type="button" class="button-example"> Example
+                        Button</button> -->
                 </div>
             </section>
         </main>
