refactor contact page

--- a/contact.html
+++ b/contact.html
@@ -56,10 +56,10 @@
                     Telephone number: <a
                         href="tel:+49-152-1615243">+491521615243</a> <br>
                     Email: <a
-                        href="mailto:testemail@tuta.com">testemail@tuta.com</a>
+                        href="mailto:examplamail@tuta.com">testemail@tuta.com</a>
                 </div>
                 <div>
-                    <a href="mailto:testemail@tuta.com" class="button">Contact
+                    <a href="mailto:examplamail@tuta.com" class="button">Contact
                         me</a>
                 </div>
             </section>
