update conatct page content

--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,9 @@
         <main>
             <section class="contact-container">
                 <h1>Contact</h1>
+                <p>Many thanks for taking the time to visit my portfolio. If you
+                    require any further information or wish to get in touch with
+                    me, please see my contact details below.</p>
                 <div class="personal-contact">
                     Mezekr w. <br>
                     Examplestraße 01 <br>
