--- a/index.html
+++ b/index.html
@@ -1,81 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mezekr W. - Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-        <link rel="stylesheet" href="css/style.production.css">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mezekr W. - Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/style.production.css">
 
-    <body>
-        <!-- This the header part-->
-        <header class="page-header">
-            <img src="img/logo-202x48.png"
-                alt=" Personal logo of Mezekr, a text logo with my name">
-            <nav class="main-navigation">
-                <ul role="menubar" class="navigation-list">
-                    <li role="presentation">
-                        <a href="index.html" role="menuitem"
-                            class="navigation-list_item navigation-list_item--active">Home</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="about.html" role="menuitem"
-                            class="navigation-list_item">About</a>
-                    </li>
-                    <li role="presentation"><a href="contact.html"
-                            role="menuitem"
-                            class="navigation-list_item">Contact</a>
-                    </li>
-                    <li role="presentation"><a href="work.html" role="menuitem"
-                            class="navigation-list_item">Work</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+</head>
 
-        <!-- This the main part-->
-        <main>
-            <section class="profile">
-                <div>
-                    <img src="img/example-profile_photo-400x400.jpg "
-                        class="profile_portrait"
-                        alt="Mezekr profile portraitphotograph">
-                </div>
-                <div class="profile-text">
-                    <h1>Hi, I'm Mezekr</h1>
-                    <p> I am <span>Web</span> developer.</p>
-                    <a href="https://github.com/" target="_blank">Check out my
-                        work</a>
-                    <!-- <button type="button" class="button-example"> Example
-                        Button</button> -->
-                </div>
-            </section>
-        </main>
-        <!-- This is just example button -->
+<body>
+    <!-- This the header part-->
+    <header class="page-header">
+        <img src="img/logo-202x48.png"
+            alt=" Personal logo of Mezekr, a text logo with my name">
+        <nav class="main-navigation">
+            <ul role="menubar" class="navigation-list">
+                <li role="presentation">
+                    <a href="index.html" role="menuitem"
+                        class="navigation-list_item navigation-list_item--active">Home</a>
+                </li>
+                <li role="presentation">
+                    <a href="about.html" role="menuitem"
+                        class="navigation-list_item">About</a>
+                </li>
+                <li role="presentation"><a href="contact.html" role="menuitem"
+                        class="navigation-list_item">Contact</a>
+                </li>
+                <li role="presentation"><a href="work.html" role="menuitem"
+                        class="navigation-list_item">Work</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-
-        <!-- This the footer part-->
-        <footer class="page-footer">
-            <p>Follow me on </p>
-            <div class="social-media">
-                <a href="https://github.com/" target="_blank">
-                    <img src="img/github_icon.svg" alt="github icon">
-                </a>
-                <a href="https://www.linkedin.com/" target="_blank">
-                    <img src="img/linkedin_icon.svg" alt="linked icon">
-                </a>
+    <!-- This the main part-->
+    <main>
+        <section class="profile">
+            <div class="profile-text">
+                <h1>Hi, I'm Mezekr</h1>
+                <h2> I am <span>a Full Stack Web Developer</span> based in
+                    Germany.
+                </h2>
+                <p>
+                    Leverage Full-Stack Web Development Capabilities
+                    to Bring Ideas to the Actual Web with Precision!
+                </p>
+                <a href="https://github.com/mezekr" target="_blank"
+                    id="github-link">Check out my
+                    work</a>
             </div>
-        </footer>
-        <script src="js/tota11y.min.js"></script>
-    </body>
+            <div>
+                <img src="img/example-profile_photo-400x400.jpg "
+                    class="profile_portrait"
+                    alt="Mezekr profile portraitphotograph">
+            </div>
+        </section>
+    </main>
+    <!-- This is just example button -->
+
+
+    <!-- This the footer part-->
+    <footer class="page-footer">
+        <p>Follow me on </p>
+        <div class="social-media">
+            <a href="https://github.com/" target="_blank">
+                <img src="img/github_icon.svg" alt="github icon">
+            </a>
+            <a href="https://www.linkedin.com/" target="_blank">
+                <img src="img/linkedin_icon.svg" alt="linked icon">
+            </a>
+        </div>
+    </footer>
+    <script src="js/tota11y.min.js"></script>
+</body>
 
 </html>
