--- a/about.html
+++ b/about.html
@@ -42,36 +42,158 @@
 
     <!-- This the main part-->
     <main>
+        <h1>Mezekr </h1>
         <section class="about-wrapper">
-            <div>
-                <h1>About Me</h1>
-                <p>
-                    I am a web developer from Eritrea living in Germany.
-                    I am passionate about all new and cool web stuff. <br>
-                    I lone to learn about new web technologies and
-                    playing aswell as watching football.
-                </p>
+            <div class="aboutme-container">
+                <div>
+                    <img src="./img/profile_about_page.jpg" alt="placeholder" />
+                </div>
+                <div>
+
+                    <p>
+                        I am a web developer from Eritrea living in Germany.
+                        <br>
+                        I am passionate about all new and cool web stuff. <br>
+                        I lone to learn about new web technologies and<br>
+                        playing as well as watching football.
+                    </p>
+                </div>
             </div>
+            <!-- aboutme-container -->
             <div>
                 <!-- <h2>Here are more about me.</h2> -->
-                <h2>what I do</h2>
-                <ul class="skills-list">
-                    <li>Fontend Developement</li>
-                    <li>Backend Developement</li>
-                    <li>Code writing/programming </li>
-                    <li>Play and watch football.</li>
+                <h1>what I do</h1>
+                <ul class="whatIdo">
+                    <li><span>Fontend Developement </span> Turn UI/UX design
+                        into an actual
+                        web or app </li>
+                    <li><span>Backend Developement </span> Develop back-end
+                        logic to support
+                        web/app with data and real-time interaction.</li>
+                    <li><span>Data processing </span> Data processing:
+                        Analysing,
+                        cleaning and visualising row
+                        data. </li>
+                    <li><span>Other Interests </span> I am also interested in
+                        history, culture and economy.
+                    </li>
                 </ul>
             </div>
+            <!-- <div class="skills-container"> -->
+            <h1>Developement Skills..</h1>
+            <div class="skills-container">
+                <div class="skills">
+                    <h2>Front-end skills.</h2>
+                    <p>HTML</p>
+                    <p>CSS</p>
+                    <p>Javascript</p>
+                    <p>React</p>
+                    <p>Angular</p>
+                </div>
+                <div class="skills">
+                    <h2>Back-end skills.</h2>
+                    <p>Nodejs</p>
+                    <p>API</p>
+                    <p>MongoDB</p>
+                    <p>PostgreSQL</p>
+                    <p></p>
+                </div>
+                <div class="skills">
+                    <h2>Other development skills.</h2>
+                    <p>Python</p>
+                    <p>Data Processing with Python</p>
+                    <p>Data visualisation with Python</p>
+                </div>
+                <div class="skills">
+                    <h2>Developement tools</h2>
+                    <p>Git</p>
+                    <p>GitHub</p>
+                    <p>Editor: Viscode, Juypter</p>
+                    <p>Docker</p>
+                    <p>CI/CD</p>
+                </div>
+            </div>
+
+            <!-- My path  -->
             <div>
-                <h2>My path to became a web developer</h2>
-                <ul class="skills-list">
+                <h1>My path...</h1>
+                <div class="timeline">
+                    <div class="container left">
+                        <div class="content">
+                            <h2> 11/2023 - 06/2024</h2>
+                            <p>Full-Stack web developent course</p>
+                            <p>CarerFoundry, Germany</p>
+                        </div>
+                    </div>
+
+                    <div class="container right">
+                        <div class="content">
+                            <h2> 02/2023 - 07/2023</h2>
+                            <p>Softeware Developer in Ferchau, Chemnitz,
+                                Germany
+                            </p>
+                            <p>Singnal Processing and visualzion with Python
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container left">
+                        <div class="content">
+                            <h2> 10/2019 - 09/2022</h2>
+                            <p>Master in Aplied computer sceince</p>
+                            <p>TU Freiberg, Freiberg Germany</p>
+                        </div>
+                    </div>
+                    <div class="container right">
+                        <div class="content">
+                            <h2> 07/2017 - 09/2019</h2>
+                            <p>learning German Languge</p>
+                            <p>C1 level : TU Freiberg, Freiberg Germany</p>
+                            <p>B1 and B2 levels: SBH Freiberg, Freiberg
+                                Germany
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container left">
+                        <div class="content">
+                            <h2> 07/2014 - 06/2017</h2>
+                            <p>Relocation to Germany from Eritrea</p>
+                        </div>
+                    </div>
+                    <div class="container right">
+                        <div class="content">
+                            <h2> 09/2013 - 06/2014</h2>
+                            <p>Information and Technology Teachers </p>
+                            <p>Sembel secondary school eritrea, Asmara</p>
+                        </div>
+                    </div>
+                    <div class="container left">
+                        <div class="content">
+                            <h2> 09/2008 - 06/2013</h2>
+                            <p>Bachelor of Science in Computer Engineering
+                            </p>
+                            <p>Eritrea Institute of Technology, Mai Nefhi,
+                                Eritrea</p>
+                        </div>
+                    </div>
+                    <div class="container right">
+                        <div class="content">
+                            <h2> 09/2004 - 06/2007</h2>
+                            <p>Secondary School </p>
+                            <p>Asmara Comprehensive Secondary School, Asmara
+                            </p>
+                            <p>Warsay-Yikealo Secondary School</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- <ul class="skills-list">
                     <li>First step</li>
                     <li>second step</li>
                     <li>Third step </li>
                     <li>CarerFoundry web developent course</li>
-                </ul>
+                </ul> -->
             </div>
-            <div class="table-container">
+            <!-- <div class="table-container">
                 <h2>Skills and Expriences</h2>
                 <table>
                     <caption> Table 1. My Web developent Skills and
@@ -107,11 +229,14 @@
                         </tr>
                     </tfoot>
                 </table>
-            </div>
+            </div> -->
             <a href="file/cv.pdf" class="button" download> Download my
                 CV</a>
+
+            <!-- Berline svg -->
             <svg id="about-picture" xmlns="http://www.w3.org/2000/svg"
-                class="berlin-illustration" height="auto" viewBox="0 0 700 505"
+                class="berlin-illustration" height="auto" length="auto"
+                viewBox="0 0 700 505"
                 xmlns:xlink="http://www.w3.org/1999/xlink">
                 <defs>
                     <polygon id="a"
@@ -1779,6 +1904,7 @@
                     </path>
                 </g>
             </svg>
+
 
         </section>
     </main>
