refactro index page UI and content

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     to Bring Ideas to the Actual Web with Precision!
                 </p>
                 <a href="https://github.com/mezekr" target="_blank"
-                    id="github-link">Check out my
+                    id="Check-my_work">Check out my
                     work</a>
             </div>
             <div>
